fix z-index in mobile-menu for tpl_modified_nova
git-svn-id: https://svn.modified-shop.org/svn/modified-shop/trunk@15464 79ac0487-9261-4f26-a34d-858dee0dcce0

--- a/templates/tpl_modified_nova/css/jquery.mmenulight.css
+++ b/templates/tpl_modified_nova/css/jquery.mmenulight.css
@@ -104,7 +104,7 @@ body.mm-ocd-opened {
   position: absolute;
   top: 0;
   bottom: 0;
-  z-index: 3;
+  z-index: 1;
   width:calc(100% - 80%);
   min-width:calc(100% - 440px);
   max-width:calc(100% - 200px);
